package SGCompute.CS;
message PieceInfo {
    enum TYPE {
        INPUT = 0;
        CACHE = 1;
        OUTPUT = 2;
    }
    required string describe = 1;
    required TYPE type = 2;
    required uint64 magic = 3;
    repeated uint32 keyDimesion = 4;
}

message ComputeInfo{
    message FuncInfo {
        required string formula = 1;
        required string parameter = 2;
        required string inputsType = 3;
    }
    required FuncInfo sFuncInfo = 1;
    message FormulaInfo {
        required string sConditionFormula = 1;
        required string sVariableInfo = 2;
    }
    required FormulaInfo sConditionInfo = 2;
    message KeyInfo {
        message Key {
            required uint32 index = 1;
            required uint32 pos = 2;
        }
        repeated Key inputKey = 1;
        repeated Key outputKey = 2;
    }
    required KeyInfo sKeyInfo = 3;
    required PieceInfo inputPieceDescribe = 4;
    required PieceInfo outputPieceDescribe = 5;
}


message Result {
    enum StatusCode {
        SUCCESS = 0;
        FAIL = 1;
    }
    required StatusCode code = 1;
}

service ComputeServer {
    rpc Compute (ComputeInfo) returns (Result);
    rpc Create (PieceInfo) returns (PieceInfo);
    rpc Release (PieceInfo) returns (Result);
}
